# ogs-sdk

./: CMakeLists.txt  LICENSE  README.md
goldsrc/: CMakeLists.txt  README.md
goldsrc/common/: com_model.h  con_nprint.h  const.h  crc.h  cvardef.h  dll_state.h  entity_state.h  kbutton.h  mathlib.h  pmtrace.h  qfont.h  screenfade.h  wrect.h
goldsrc/engine/: cdll_int.h  custom.h  edict.h  eiface.h  progdefs.h  progs.h  shake.h  studio.h
goldsrc/mathlib/: vector.cpp
goldsrc/next/: CommonTypes.hpp
goldsrc/next/engine/: IEngine.hpp  IGameClient.hpp  IGameClientEventListener.hpp  IGameServer.hpp  (+4 more)
goldsrc/public/: FileSystem.h  IGameUIFuncs.h  bspfile.h  engine_hlds_api.h  engine_launcher_api.h  icvar.h
goldsrc/tier1/: CMakeLists.txt  ConVar.cpp  RegistryUnix.cpp  RegistryWin.cpp
goldsrc/tier1/tests/: CMakeLists.txt  registry_tests.cpp
goldsrc/utils/: CMakeLists.txt
goldsrc/utils/bspinfo/: bspinfo.c
goldsrc/utils/common/: bspfile.h  bsplib.h  cmdlib.c  cmdlib.h  lbmlib.c  lbmlib.h  mathlib.c  mathlib.h  meter.c  meter.h  polylib.c  polylib.h  scriplib.c  scriplib.h  threads.c  threads.h
goldsrc/utils/light/: entities.c  entities.h  light.c  light.h  ltface.c  threads.c  threads.h  trace.c
goldsrc/utils/mdlviewer/: StudioModel.cpp  StudioModel.hpp
goldsrc/utils/qbsp2/: bsp5.h  merge.c  nodraw.c  outside.c  portals.c  qbsp.c  region.c  solidbsp.c  surfaces.c  tjunc.c  writebsp.c
goldsrc/utils/qcsg/: brush.c  csg4.c  map.c  map.h
goldsrc/utils/qlumpy/: qlumpy.h
goldsrc/utils/sprgen/: spritegn.h
goldsrc/utils/visx2/: flow.c  soundpvs.c  vis.c  vis.h
(+44 files in other folders)
