#add_subdirectory(common)

add_subdirectory(bspinfo)
#add_subdirectory(light)
add_subdirectory(makefont)
add_subdirectory(makels)
add_subdirectory(mdlviewer)
add_subdirectory(mkmovie)
add_subdirectory(procinfo)
add_subdirectory(qbsp2)
add_subdirectory(qcsg)
add_subdirectory(qlumpy)
add_subdirectory(qrad)
add_subdirectory(serverctrl)
add_subdirectory(smdlexp)
add_subdirectory(sprgen)
add_subdirectory(studiomdl)
add_subdirectory(visx2)
add_subdirectory(xwad)